<resources>
    <string name="app_name">Foodies</string>
    <string name="home">Home</string>
    <string name="my_profile">My profile</string>
    <string name="favourite_resturant">Favourite Restaurant</string>
    <string name="faqs">FAQs</string>
    <string name="log_out">Log Out</string>
    <string name="username">UserName</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="order_history">Order History</string>
    <string name="no_restaurent">You do not have any Favourite Restaurants</string>
    <string name="enterMobNumber">Enter Mobile Number</string>
    <string name="enterPasswoard">Passwoard</string>
    <string name="log_in">LOG IN</string>
    <string name="forgotpassword">Forgot passwoard?</string>
    <string name="registerhere">NewUser?RegisterHere</string>
    <string name="enterName">Name</string>
    <string name="email_address">EmailAddress</string>
    <string name="mobile_number">MobileNumber</string>
    <string name="delivery_address">DelevaryAddress</string>
    <string name="passwoard_min_4">Password(Min 4)</string>
    <string name="confirm_password">ConfirmPassword</string>
    <string name="register">REGISTER</string>
    <string name="next">NEXT</string>
    <string name="otp">OTP</string>
    <string name="newpassword_min4">NewPassword(min4)</string>
    <string name="choose_from_menu_listed_below">Choose From menu Listed Below:</string>
    <string name="proceed_to_cart">Proceed To Cart</string>
    <string name="remove">Remove</string>
    <string name="add">ADD</string>
    <string name="odering_from">Odering From:</string>
    <string name="order_placed">Your order has been placed successfully</string>
    <string name="your_previous_order">Your previous orders are listed below:</string>
    <string name="search_restaurant">Search Restaurant</string>
    <string name="houseno_locality">HouseNo./Locality</string>
    <string name="city_village_town">City/Village/Town</string>
</resources>
