<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<group
    android:checkableBehavior="single"
    >
    <item
        android:id="@+id/menuHome"
        android:title="@string/home"
        android:icon="@drawable/ic_home"
    />
    <item
        android:id="@+id/menumyProfile"
        android:title="@string/my_profile"
        android:icon="@drawable/ic_profile"
       />
    <item
        android:id="@+id/menuFavourite"
        android:title="@string/favourite_resturant"
        android:icon="@drawable/ic_favourite"
        />
    <item
        android:id="@+id/menuOrderHistory"
        android:title="@string/order_history"
        android:icon="@drawable/ic_history"/>
    <item
        android:id="@+id/menuFAQs"
        android:title="@string/faqs"
        android:icon="@drawable/ic_f_a_q"/>
    <item
        android:id="@+id/menuLogOut"
        android:title="@string/log_out"
        android:icon="@drawable/ic_log_out"/>
</group>
</menu>