<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.OtpVerificationActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_centerInParent="true">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="#ffffff"
        android:padding="6dp"
        android:hint="@string/otp"/>
    <LinearLayout
        android:id="@+id/llPasswordOfUser"
        android:background="#ffffff"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:orientation="horizontal"
        android:weightSum="100">

        <ImageView

            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:background="#ffffff"
            android:src="@drawable/passwoardsymbol" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="80"
            android:background="#ffffff"
            android:hint="@string/password_min_4"
            android:inputType="textPassword"
            android:maxLength="15"
            android:maxLines="1"
            android:padding="6dp" />

        <ImageView
            android:id="@+id/registrationShowPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="10"
            android:scaleType="centerInside"
            android:src="@drawable/ic_show_passwoard" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"

        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:orientation="horizontal">

        <ImageView

            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:background="#ffffff"
            android:src="@drawable/passwoardsymbol" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ffffff"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:maxLength="15"
            android:maxLines="1"
            android:padding="6dp" />
    </LinearLayout>

</LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:textSize="20sp"
        android:textColor="#ffffff"
        android:background="@drawable/roundededge"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="25dp"/>
</RelativeLayout>