<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ForgotpasswordActivity">
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
<com.google.android.material.appbar.AppBarLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBarForgotpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Light"
        android:background="#ffffff"/>
</com.google.android.material.appbar.AppBarLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true">
                <LinearLayout
                    android:id="@+id/llMobileNumberOfForgottedUser"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="15dp"
                    android:orientation="horizontal">

                    <ImageView

                        android:layout_width="40dp"
                        android:layout_height="match_parent"
                        android:background="#ffffff"
                        android:src="@drawable/ic_mobile" />

                    <EditText
                        android:id="@+id/edtMobileNumberOfUserForgotPassword"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#ffffff"
                        android:hint="@string/enterMobNumber"
                        android:maxLength="10"
                        android:inputType="phone"
                        android:padding="6dp" />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/llEmailOfUser"
                    android:layout_below="@+id/llMobileNumberOfForgottedUser"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="15dp"
                    android:orientation="horizontal">
                    <ImageView

                        android:layout_width="40dp"
                        android:layout_height="match_parent"
                        android:background="#ffffff"
                        android:src="@drawable/emailsymbol" />

                    <EditText
                        android:id="@+id/edtEmailForgotPassword"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#ffffff"
                        android:hint="@string/email_address"
                        android:maxLength="30"
                        android:maxLines="1"
                        android:inputType="textEmailAddress"
                        android:padding="6dp" />
                </LinearLayout>
            </RelativeLayout>
            <Button
                android:id="@+id/btnNextFromForgotPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/next"
                android:textSize="20sp"
                android:textColor="#ffffff"
                android:background="@drawable/roundededge"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="25dp"
                android:layout_marginStart="25dp"/>
                   </RelativeLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
    <RelativeLayout
        android:visibility="gone"
        android:id="@+id/progressLayoutForgotPassword"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        >

        <ProgressBar
            android:id="@+id/progressBarForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"/>
    </RelativeLayout>
</RelativeLayout>